--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,14 +32,24 @@
 		    android:configChanges="orientation"
 		    android:launchMode="singleInstance">
 		</activity>        
-        
+
+		<activity-alias
+		     android:name=".ApphanceLauncherActivity"    
+		     android:targetActivity="com.apphance.android.LauncherActivity">
+		         <intent-filter>
+		            <action android:name="android.intent.action.MAIN"></action>
+		            <category android:name="android.intent.category.LAUNCHER"></category>
+		         </intent-filter>
+		</activity-alias>
+		
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                
+				<action android:name="com.apphance.android.LAUNCH"></action>
+         		<category android:name="android.intent.category.DEFAULT"></category>
 
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
