--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,15 @@
         android:minSdkVersion="7"
         android:targetSdkVersion="15" />
 
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>    
+    
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
