--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.applause:applause-sdk-preprod:+@aar'
+    compile 'com.applause:applause-sdk:+@aar'
 }
 
 android {
