Updating Android scripts version

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 
 apply plugin: 'android-sdk-manager'
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 repositories {
     mavenCentral()
@@ -20,6 +20,6 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1"
+    compileSdkVersion 21
+    buildToolsVersion '21.1.2'
 }
